--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,21 +1,21 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,100);
-body {
-  background-color: blue; }
 
 body {
   font-family: "Roboto", "Open Sans", "Sans Serif", "Georgia", "Times New Roman", Times, serif;
   /* Margin bottom by footer height */
   margin-bottom: 100px;
   line-height: 1.6;
-  font-weight: 300; }
-
+  font-weight: 300;
+}
 html {
   position: relative;
-  min-height: 100%; }
+  min-height: 100%;
+}
 
 * {
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  -moz-osx-font-smoothing: grayscale;
+}
 
 .footer {
   position: absolute;
@@ -24,120 +24,125 @@ html {
   /* Set the fixed height of the footer here */
   height: 100px;
   font-size: 0.8em;
-  padding-top: 2em; }
+  padding-top: 2em;
+}
 
 .blog-masthead {
   margin-bottom: 3rem;
   background-color: #428bca;
-  -webkit-box-shadow: inset 0 -0.1rem 0.25rem rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 -0.1rem 0.25rem rgba(0, 0, 0, 0.1); }
-
+  -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0, 0, 0, .1);
+  box-shadow: inset 0 -.1rem .25rem rgba(0, 0, 0, .1);
+}
 .navbar-light .navbar-nav .nav-link {
   padding: 0.5rem;
-  color: rgba(0, 0, 0, 0.9); }
-
+  color: rgba(0, 0, 0, 0.9);
+}
 .blog-header {
   margin-bottom: 1rem;
-  background-color: #fff !important; }
-
+  background-color: #fff !important;
+}
 h1.post-title {
   text-decoration: none;
   margin-top: 0.75em;
-  margin-bottom: 0px; }
-
-h1.post-title a {
-  text-decoration: none; }
-
+  margin-bottom: 0px;
+}
+h1.post-title a{
+  text-decoration: none;
+}
 .post-meta {
   margin-bottom: 1rem;
   display: table;
   font-size: 0.8rem;
   color: rgba(0, 0, 0, 0.6);
-  text-transform: uppercase; }
-
+  text-transform: uppercase;
+  ;
+}
 .post-meta-item {
   margin-right: 10px;
-  float: left; }
-
+  float: left;
+}
 .post-meta-item > a {
   text-decoration: none;
-  color: rgba(0, 0, 0, 0.6); }
-
+  color: rgba(0, 0, 0, 0.6);
+}
 .post-more-link {
-  margin-top: 0px; }
+  margin-top: 0px;
+}
 
 pre code {
-  font-family: "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace; }
+  font-family: "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace;
+}
 
 /* Responsive video? */
+
 iframe {
-  max-width: 100%; }
-
+  max-width: 100%;
+}
 .sidebar > .card {
-  -webkit-box-shadow: inset 0 0 0 0px rgba(0, 0, 0, 0.125);
-  box-shadow: inset 0 0 0 0px rgba(0, 0, 0, 0.125);
+  -webkit-box-shadow: inset 0 0 0 0px rgba(0, 0, 0, .125);
+  box-shadow: inset 0 0 0 0px rgba(0, 0, 0, .125);
   background-color: inherit;
-  border: 0px; }
-
+  border: 0px;
+}
 .sidebar > .card-block {
   padding-left: 0px;
   padding-top: 0px;
-  padding-right: 0px; }
-
+  padding-right: 0px;
+}
 .widget {
   word-wrap: break-word;
-  font-size: 0.85em; }
-
+  font-size: 0.85em;
+}
 .widget ul, .widget ol {
   padding-left: 0;
   list-style: none;
-  margin: 0; }
-
+  margin: 0;
+}
 .widget ul ul, .widget ol ul, .widget ul ol, .widget ol ol {
-  margin: 0 20px; }
-
+  margin: 0 20px;
+}
 .widget ul ul, .widget ol ul {
-  list-style: disc; }
-
+  list-style: disc;
+}
 .widget ul ol, .widget ol ol {
-  list-style: decimal; }
-
+  list-style: decimal;
+}
 .category-list-count, .tag-list-count, .archive-list-count {
   padding-left: 5px;
-  font-size: 0.85em; }
-
+  font-size: 0.85em;
+}
 .category-list-count:before, .tag-list-count:before, .archive-list-count:before {
-  content: "("; }
-
+  content: "(";
+}
 .category-list-count:after, .tag-list-count:after, .archive-list-count:after {
-  content: ")"; }
-
+  content: ")";
+}
 .category-list-item > a {
-  text-transform: uppercase; }
-
+  text-transform: uppercase;
+}
 .widget a {
-  text-decoration: none; }
-
+  text-decoration: none;
+}
 .widget ul ul, .widget ol ul, .widget dl ul, .widget ul ol, .widget ol ol, .widget dl ol, .widget ul dl, .widget ol dl, .widget dl dl {
   margin-left: 15px;
-  list-style: disc; }
-
+  list-style: disc;
+}
 .widget ul, .widget ol {
-  list-style: none; }
-
+  list-style: none;
+}
 .widget ul li, .widget ol li, .widget ul .category-list-child, .widget ol .category-list-child {
   font-size: 0.9rem;
-  border-bottom: 1px solid border-color; }
-
+  border-bottom: 1px solid border-color;
+}
 .widget ul ul, .widget ol ul, .widget ul ol, .widget ol ol {
-  list-style: none; }
-
+  list-style: none;
+}
 .widget ul ul li, .widget ol ul li, .widget ul ol li, .widget ol ol li {
-  border: none; }
-
+  border: none;
+}
 .widget ul ul li:last-child, .widget ol ul li:last-child, .widget ul ol li:last-child, .widget ol ol li:last-child {
-  padding-bottom: 0px; }
-
+  padding-bottom: 0px;
+}
 .widget ul:not(#recent-post) li a:before, .widget ol:not(#recent-post) li a:before {
   color: #ccc;
   content: "\f0da";
@@ -147,21 +152,21 @@ iframe {
   -webkit-transition: 0.2s ease;
   -moz-transition: 0.2s ease;
   -ms-transition: 0.2s ease;
-  transition: 0.2s ease; }
-
+  transition: 0.2s ease;
+}
 #recent-post li {
-  padding: 5px 0 5px 85px; }
-
+  padding: 5px 0 5px 85px;
+}
 #recent-post li:before, #recent-post li:after {
   content: "";
-  display: table; }
-
+  display: table;
+}
 #recent-post li:after {
-  clear: both; }
-
+  clear: both;
+}
 #recent-post.no-thumbnail li {
-  padding: 5px 0px; }
-
+  padding: 5px 0px;
+}
 #recent-post li .item-thumbnail {
   opacity: 1;
   float: left;
@@ -169,62 +174,69 @@ iframe {
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   -ms-transition: all 0.2s ease;
-  transition: all 0.2s ease; }
-
+  transition: all 0.2s ease;
+}
 #recent-post li .item-thumbnail .thumbnail {
   width: 80px;
   height: 80px;
   display: block;
   position: relative;
-  overflow: hidden; }
+  overflow: hidden;
+}
+
 
 .thumbnail-image {
   width: 100%;
   height: 100%;
   display: block;
   background-position: center;
-  background-size: cover; }
-
+  background-size: cover;
+}
 #recent-post li .item-thumbnail .thumbnail .thumbnail-none {
   background-image: url("images/thumb-default-small.png");
   -webkit-background-size: 100% 100%;
   -moz-background-size: 100% 100%;
-  background-size: 100% 100%; }
-
+  background-size: 100% 100%;
+}
 #recent-post li .item-inner a, #recent-post li .item-inner .item-category {
   font-size: 0.8rem;
   text-transform: uppercase;
-  margin: 0px; }
-
+  margin: 0px;
+}
 #recent-post li .item-inner a a, #recent-post li .item-inner .item-category a, #recent-post li .item-inner a .fa, #recent-post li .item-inner .item-category .fa {
-  margin-right: 5px; }
-
+  margin-right: 5px;
+}
 #recent-post li .item-inner .item-title {
   font-size: 0.8rem;
   text-align: left;
   margin: 0px;
-  color: rgba(0, 0, 0, 0.9); }
-
+  color: rgba(0, 0, 0, 0.9);
+}
 #recent-post li .item-inner .item-title a {
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   -ms-transition: all 0.2s ease;
-  transition: all 0.2s ease; }
+  transition: all 0.2s ease;
+}
 
 #recent-post li:hover .item-thumbnail {
-  opacity: 0.8; }
+  opacity: 0.8;
+}
 
 .post-container {
   background-color: #fff;
   margin-bottom: 1rem;
-  padding-top: 1rem; }
+  padding-top: 1rem;
+}
 
-img.post-thumbnail {
-  vertical-align: middle;
-  max-height: 80px;
-  max-width: 80px;
-  padding: 0px;
-  border: 0px; }
+img.post-thumbnail{
+    vertical-align: middle;
+    max-height: 80px;
+    max-width: 80px;
+    padding: 0px;
+    border: 0px;
+}
 
-.no-border {
-  border: 0px !important; }
+.no-border{
+  border: 0px !important;
+}
