--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,9 +5,8 @@
   <title>{{ .Title }} {{ if ne .Title .Site.Title }} &middot; {{ .Site.Title }}{{ end }}</title>
   {{ partial "base/metas" . }}
 
-  <link rel="stylesheet" href="{{ "assets/css/font-awesome.min.css" | relURL }}">
-  <link rel="stylesheet" href="{{ "assets/css/style.css" | relURL }}">
-  <link rel="stylesheet" href="{{ "assets/css/tomorrow-night.css" | relURL }}">
+  <link rel="stylesheet" href="{{ "assets/css/dep.css" | relURL }}">
+  <link rel="stylesheet" href="{{ "assets/css/app.css" | relURL }}">
   <link href='//fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
 
 </head>
