Block based templates

--- a/layouts/partials/base/footer.html
+++ b/layouts/partials/base/footer.html
@@ -1,12 +1,9 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-9">
-        <p class="text-xs-center m-a-0 p-a-0">
-          &copy; {{now.Format "2006"}} {{ with .Site.Copyright }}{{ . | markdownify}}{{ end }}
-        </p>
+      <div class="col-xs-12 col-md-9 col-lg-7">
         {{ if .Site.Menus.footer }}
-        <p class="text-xs-center  m-a-0 p-a-0">
+        <p class="text-xs-center ">
           {{ $footerMenuLen := len .Site.Menus.footer}} {{ if gt $footerMenuLen 0 }} {{ range $k, $v := .Site.Menus.footer }}
           <span class="p-l-1 p-r-1">
                 <a href="{{.URL}}">{{ .Name }}</a>
