--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,13 +1,13 @@
-{{ partial "head" . }}
-<div class="container post-container">
-  <header>
-    {{ partial "content/h1-title" . }}
-  </header>
-  <ul class="container">
-    {{ range $index, .Paginator.Pages }}
-      <li>{{ partial "content/title-link" . }}</li>
-    {{ end }}
-  </ul>
-  {{ partial "content/pagination.html" . }}
+{{ define "main" }}
+<div class="container ">
+  <div class="row">
+      <div class="col-xs-12 col-md-9 col-lg-7 post-container">
+          <code>list.html</code>
+          {{ .Content }}
+      </div>
+      <div class="col-xs-12 col-md-3">
+          {{ partial "content/sidebar" .}}
+      </div>
+  </div>
 </div>
-{{ partial "foot" . }}
+{{ end }}
