--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,14 +1,13 @@
-{{ partial "head" . }}
-<div class="container p-a-0">
-  <div class="row m-l-0 m-r-0">
-    <div class="col-xs-12 col-md-9 post-container">
-      {{ .Render "single.hat" }}
-      {{ .Render "single.content" }}
-      {{ .Render "single.boot" }}
-    </div>
+{{ define "main" }}
+<div class="container ">
+  <div class="row">
+      <div class="col-xs-12 col-md-9 col-lg-7 post-container">
+          <code>single.html</code>
+          {{ .Content }}
+      </div>
       <div class="col-xs-12 col-md-3">
-        {{ partial "content/sidebar" .}}
+          {{ partial "content/sidebar" .}}
       </div>
   </div>
 </div>
-{{ partial "foot" . }}
+{{ end }}
