--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,13 @@
-{{ partial "head" . }}
-{{ partial "homepage" . }}
-{{ partial "foot" . }}
+{{ define "main" }}
+<div class="container ">
+    <div class="row">
+        <div class="col-xs-12 col-md-9 col-lg-7 post-container">
+            <code>index.html</code>
+            {{ .Content }}
+        </div>
+        <div class="col-xs-12 col-md-3">
+            {{ partial "content/sidebar" .}}
+        </div>
+    </div>
+</div>
+{{ end }}
