--- a/layouts/partials/base/header.html
+++ b/layouts/partials/base/header.html
@@ -1,23 +1,22 @@
-<nav class="navbar navbar-expand-md navbar-light blog-header">
-  <div class="container">
-    <button class="navbar-toggler" type="button" data-toggle="collapse"
-        data-target="#exCollapsingNavbar2"
-        aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
-      &#9776;
+<header class="container">
+  <div class="row">
+    <div class="col-xs-12 col-lg-7">
+      <nav class="navbar navbar-expand-lg navbar-light bg-faded align-top">
+        <a class="navbar-brand" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="exCollapsingNavbar2">
-      <a class="navbar-brand" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
-      <ul class="nav navbar-nav">
-        {{ $currentNode := . }}
-        {{ range .Site.Menus.main }}
-          <li class="nav-item">
-          <a class="nav-link menu-item" href="{{.URL}}">
-              {{ .Pre }}
-              <span>{{ .Name }}</span>
-          </a>
-        </li>
-        {{end}}
-      </ul>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            {{ $currentPage := . }} {{ range .Site.Menus.main }}
+            <li class="nav-item{{ if $currentPage.IsMenuCurrent " main " . }} active{{ end }}">
+              <a class="nav-link" href="{{.URL}}"><span>{{ .Name }}</span></a>
+            </li>
+            {{ end }}
+          </ul>
+        </div>
+      </nav>
     </div>
   </div>
-</nav>
+</header>
