--- a/layouts/partials/content/pagination.html
+++ b/layouts/partials/content/pagination.html
@@ -1,22 +1,59 @@
 {{ if gt $.Paginator.TotalPages 1 }}
 <div class="row ">
+  <nav class="col-xs-12 col-sm-12">
     <ul class="pagination">
       {{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
-          {{ if .Paginator.HasPrev }}
-            <li class="page-item">
-              <a class="page-link" rel="prev" href="{{ .Paginator.Prev.URL | relURL }}">
-                  « Previous
-              </a>
-            </li>
+      {{ if .Paginator.HasPrev }}
+      <li class="page-item prev">
+        <a class="page-link" rel="prev" href="{{ .Paginator.Prev.URL | relURL }}">
+          « neuer
+        </a>
+      </li>
+      {{ end }}
+
+      {{ $pag := $.Paginator }}
+      {{ $window := $.Site.Params.paginateWindow | default 1 }}
+      {{ if gt $pag.TotalPages 1 }}
+        {{ $total := $pag.TotalPages }}
+        {{ $size := add 5 (add $window $window) }}
+        {{ $cur := $pag.PageNumber }}
+        {{ if gt $total $size }}
+          {{ if lt $cur (sub $size (add $window 1)) }}
+            {{ $.Scratch.Set "show" (seq 1 (sub $size 2)) }}
+          {{ else if lt (sub $total $cur) (sub $size (add $window 2)) }}
+            {{ $.Scratch.Set "show" (seq (add (sub $total $size) 3) $total) }}
+          {{ else }}
+            {{ $.Scratch.Set "show" (seq (sub $cur $window) (add $cur $window)) }}
           {{ end }}
-          {{ if .Paginator.HasNext }}
-            <li class="page-item">
-              <a class="page-link" rel="next" href="{{ .Paginator.Next.URL | relURL }}">
-                  Next »
-              </a>
-            </li>
-          {{ end }}
+          {{ $.Scratch.Add "show" 1 }}
+          {{ $.Scratch.Add "show" $total }}
+        {{ else }}
+          {{ $.Scratch.Set "show" (seq 1 $total) }}
+        {{ end }}
+
+        {{ range $pag.Pagers }}
+        {{ $cur := .PageNumber }}
+        {{ if in ($.Scratch.Get "show") $cur }}
+        <li class="page-item{{ if eq . $pag }} active{{ end }}"><a class="page-link" href="{{ .URL }}">{{ .PageNumber }}</a></li>
+        {{ else if in (slice 2 (sub $total 1)) $cur }}
+        <li class="page-item disabled"><a name="">&hellip;</a></li>
+        {{ end }}
+        {{ end }}
+      {{ end }}
+
+      {{ if .Paginator.HasNext }}
+      <li class="page-item next">
+        <a class="page-link" rel="next" href="{{ .Paginator.Next.URL | relURL }}">
+          älter »
+        </a>
+      </li>
+      {{ end }}
       {{ end }}
     </ul>
+
+
+
+
+  </nav>
 </div>
 {{ end }}
