--- a/layouts/partials/content/sidebar.html
+++ b/layouts/partials/content/sidebar.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
-  {{ partial "widgets/recent_articles" . }}
   {{ partial "widgets/categories" . }}
+  {{ partial "widgets/search" . }}
+  {{ partial "widgets/recent_articles" . }}
   {{ partial "widgets/tags" . }}
   {{ partial "widgets/tag_cloud" . }}
 </div>
