--- a/layouts/partials/content/title.html
+++ b/layouts/partials/content/title.html
@@ -1,1 +1,1 @@
-{{ if .IsPage }}{{ if .Draft }}{{ .Site.Data.Strings.draft }} :: {{ end }}{{ end }}{{ .Title }}
+<span>{{ if .IsPage }}{{ if .Draft }}{{ .Site.Data.Strings.draft }} :: {{ end }}{{ end }}{{ .Title }}</span>
